# GlassdoorInterviewExpert

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  questions.txt
embeddings/: chroma.sqlite3
src/: ask.py  build_index.py  create_result_files.py  get_interviewquestions_from_glassdoor.py  helpers.py
